--- a/web designing challenge/JQuery/index.html
+++ b/web designing challenge/JQuery/index.html
@@ -15,6 +15,7 @@
             integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
             crossorigin="anonymous"></script>
             <script>
+            // This is a test command
             $(document).ready(function(){
                 $("#btn").click(function(){
                     alert("Button Clicked")
