--- a/project/to-do-list-app/index.html
+++ b/project/to-do-list-app/index.html
@@ -4,29 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Javascript</title>
-        <style>
-
-            body{
-                display: flex;
-                justify-content: center;
-            }
-
-            .list-parent li{
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                border: 1px solid rgb(35, 35, 35);
-                height:24px;
-                border-radius: 3px;
-                padding-left : 5px;
-                margin-bottom:5px;
-            }
-
-            .fa-trash{
-                margin-left:auto;
-                margin-right:10px;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
