--- a/workshop/Javascript/index.html
+++ b/workshop/Javascript/index.html
@@ -6,6 +6,10 @@
         <title>Javascript</title>
     </head>
     <body>
+
+        <p id="demo">Change This Text</p>
+        <button>Click Change</button>
+
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/345ff3c453.js"
             crossorigin="anonymous"></script>
