--- a/workshop/Javascript/index.html
+++ b/workshop/Javascript/index.html
@@ -8,10 +8,13 @@
     <body>
 
         <p id="demo">Change This Text</p>
-        <button>Click Change</button>
+        <button onclick="clickMe()">Click Change</button>
+        <br><br>
+
+        <input type="text" id="text-box">
+        <button onclick="getName()">  get name</button>
+        <p id="name"></p>
 
         <script src="script.js"></script>
-        <script src="https://kit.fontawesome.com/345ff3c453.js"
-            crossorigin="anonymous"></script>
     </body>
 </html>
